--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/src/assets/Wanderlust Archive.png" />
+  <meta name="description"
+    content="Wanderlust Archive is a platform dedicated to capturing your dream trips. Create and organize your ultimate travel wishlist, from iconic destinations to hidden gems. Whether you’re planning your next adventure or simply daydreaming, this space lets you keep track of the places you long to explore. Start building your dream travel list today!" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wanderlust Archive</title>
+</head>
+
+<body class="font-playfair">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
