--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Wanderlust Archive</title>
 </head>
 
-<body class="font-playfair">
+<body class="font-poppins">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
