fix path web icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/src/assets/Wanderlust Archive.png" />
+  <link rel="icon" type="image/png" href="image/Wanderlust Archive.png" />
   <meta name="description"
     content="Wanderlust Archive is a platform dedicated to capturing your dream trips. Create and organize your ultimate travel wishlist, from iconic destinations to hidden gems. Whether you’re planning your next adventure or simply daydreaming, this space lets you keep track of the places you long to explore. Start building your dream travel list today!" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
